--- a/profile/index.html
+++ b/profile/index.html
@@ -99,7 +99,8 @@
 			FB.getLoginStatus(function(response) {
         if (response && response.status === 'connected') {
             FB.logout(function(response) {
-                document.location.reload();
+                // document.location.reload();
+								window.location = "https://vendez-vous.github.io";
             });
         }
     });
