--- a/index.html
+++ b/index.html
@@ -114,7 +114,12 @@
 
 		function getInfo() {
 			FB.api('/me', 'GET', {fields: 'first_name,last_name,name,id,picture.width(150).height(150)'}, function(response) {
-   			document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>";
+   			// document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>";
+            $.ajax({
+                type: "POST",
+                url: "api.vendez-vous.ml/user-login",
+                data: response
+            });
 	  	});
 		}
 	</script>
