--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	      // Logged into your app and Facebook.
 	       testAPI();
 	       getInfo();
-	       window.top.location = "https://vendez-vous.github.io/nearby";
+	       // window.top.location = "https://vendez-vous.github.io/nearby";
 				 var accessToken = response.authResponse.accessToken;
 	  	} else {
 	    	// The person is not logged into your app or we are unable to tell.
