working with AJAX POST

--- a/index.html
+++ b/index.html
@@ -113,13 +113,11 @@
 		}
 
 		function getInfo() {
-			FB.api('/me', 'GET', {fields: 'first_name,last_name,name,id,picture.width(150).height(150)'}, function(response) {
+			FB.api('/me', 'GET', {fields: 'name,id,picture.width(150).height(150)'}, function(response) {
    			// document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>";
-            $.ajax({
-                type: "POST",
-                url: "api.vendez-vous.ml/user-login",
-                data: response
-            });
+            $.post( "api.vendez-vous.ml/user-login", response, function(data) {
+                console.log(data);
+            }, "json");
 	  	});
 		}
 	</script>
