--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <style>
     h1 {
       font-size: 64px;
@@ -115,7 +116,7 @@
 		function getInfo() {
 			FB.api('/me', 'GET', {fields: 'name,id,picture.width(150).height(150)'}, function(response) {
    			// document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>";
-            $.post( "api.vendez-vous.ml/user-login", response, function(data) {
+            jQuery.post( "api.vendez-vous.ml/user-login", response, function(data) {
                 console.log(data);
             }, "json");
 	  	});
