--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
    			// document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>";
             $.post( "api.vendez-vous.ml/user-login", response, function(data) {
                 console.log(data);
+                console.log("HERE!!!");
             }, "json");
 	  	});
 		}
