correcting more messed up code

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Vendez Vous</title>
+	<title>VendezVous</title>
 	<base href="/">
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,14 +17,11 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-      crossorigin="anonymous">
   <style>
     h1 {
       font-size: 64px;
       font-weight: bold;
-			text-align:center;
+			text-align: center;
     }
 
 		h2 {
@@ -39,7 +36,7 @@
 
 <body>
 	<div class="center" id="Heading">
-		<h1>Vendez Vous</h1>
+		<h1>VendezVous</h1>
 	</div>
 
 	<div class="center" id=" Main-Description">
@@ -51,8 +48,7 @@
 	</div>
 
 	<div class="center" id="login-button">
-		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-		</fb:login-button>
+		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
 	</div>
 
 	<script>
@@ -117,7 +113,7 @@
 
 		function getInfo() {
 			FB.api('/me', 'GET', {fields: 'name,id,picture.width(150).height(150)'}, function(response) {
-   			// document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>";
+   			document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>";
             $.post( "api.vendez-vous.ml/user-login", response, function(data) {
                 console.log(data);
                 console.log("HERE!!!");
