add meta tags for favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<base href="/">
 	<meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- meta tag for favicon-->
+	<link rel="shortcut icon" href="/favicon.png">
   <!-- meta tag to make the website Search Engine friendly-->
   <meta name="HandheldFriendly" content="True">
 	<meta name="description=" content="Vendez Vous - The app that lets you network over meals, based on your conversation interests." />
@@ -61,7 +63,7 @@
 	      // Logged into your app and Facebook.
 	       testAPI();
 	       getInfo();
-	       // window.top.location = "https://vendez-vous.github.io/nearby";
+	       window.top.location = "/nearby";
 				 var accessToken = response.authResponse.accessToken;
 	  	} else {
 	    	// The person is not logged into your app or we are unable to tell.
