--- a/nearby/index.html
+++ b/nearby/index.html
@@ -5,19 +5,22 @@
 	<base href="/">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- meta tag for favicon-->
+	<link rel="shortcut icon" href="/favicon.png">
   <!-- meta tag to make the website Search Engine friendly-->
   <meta name="HandheldFriendly" content="True">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+	<!-- Adding Google Font API -->
+	<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Tangerine|Gugi|Indie+Flower">
   <style type="text/css">
-		h1 {
+		.heading h1 {
 			font-size: 64px;
-			font-weight: bold;
+			font-family: 'Indie Flower', sans-serif;
 			text-align:center;
-		}
-
-		h2 {
-
+			background-color: rgb(124, 124, 224);
+			color: white;
+			margin: 0;
 		}
 
 		button {
@@ -27,7 +30,7 @@
 </head>
 
 <body>
-	<div class="center" id="Heading">
+	<div class="heading">
 		<h1>Nearby users available to meet</h1>
 	</div>
 
@@ -59,7 +62,7 @@
 		};
 	</script>
 
-	<!-- Optional JavaScript -->
+	<!-- Ocdptional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
