--- a/nearby/index.html
+++ b/nearby/index.html
@@ -80,7 +80,7 @@
 
 		.person .pic img {
 			width: 100%;
-			height: auto;
+			height: 100%;
 			border-radius: 50%;
 			transform: scale(1);
 			transition: all 0.9s ease 0s;
@@ -139,7 +139,7 @@
 			<div class="col-md-3 col-sm-6">
 				<div class="person">
 					<div class="pic">
-						<img src="addy.jpg" alt="Profile Picture">
+						<img src="/nearby/addy.jpg" alt="Profile Picture">
 					</div>
 					<div class="content">
 						<h3 class="name">Insert name here</h3>
