--- a/nearby/index.html
+++ b/nearby/index.html
@@ -45,7 +45,6 @@
 			width: 130px;
 			height: 130px;
 			margin-bottom: 50px;
-			background: #eb1768;
 			z-index: 1;
 			position: relative;
 		}
@@ -57,7 +56,7 @@
 			bottom: 135%;
 			right: 0;
 			left: 0;
-			background: #eb1768;
+			background: rgb(124, 124, 224);
 			transform: scale(3);
 			transition: all 0.3s linear 0s;
 		}
@@ -71,7 +70,7 @@
 			width: 100%;
 			height: 100%;
 			border-radius: 50%;
-			background: #ee4266;
+			background: rgb(124, 124, 224);
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -86,7 +85,7 @@
 			transition: all 0.9s ease 0s;
 		}
 
-		.person:hover pic img {
+		.person:hover .pic img {
 			box-shadow: 0 0 0 14px #f7f5ec;
 			transform: scale(0.7);
 		}
@@ -131,7 +130,7 @@
 					</div>
 					<div class="content">
 						<h3 class="name">Insert name here</h3>
-						<span class="interests">Get interests</span>
+						<span class="interests">Interests</span>
 					</div>
 				</div>
 	    </div>
@@ -143,7 +142,7 @@
 					</div>
 					<div class="content">
 						<h3 class="name">Insert name here</h3>
-						<span class="interests">Get interests</span>
+						<span class="interests">Interests</span>
 					</div>
 				</div>
 	    </div>
@@ -155,7 +154,7 @@
 					</div>
 					<div class="content">
 						<h3 class="name">Insert name here</h3>
-						<span class="interests">Get interests</span>
+						<span class="interests">Interests</span>
 					</div>
 				</div>
 	    </div>
@@ -167,7 +166,7 @@
 					</div>
 					<div class="content">
 						<h3 class="name">Insert name here</h3>
-						<span class="interests">Get interests</span>
+						<span class="interests">Interests</span>
 					</div>
 				</div>
 	    </div>
