add text-area for profile

--- a/profile/index.html
+++ b/profile/index.html
@@ -51,19 +51,18 @@
 	  		<h2>Name</h2>
 	  		<input type="text" name="name">
 	  		<br><br>
-				<!-- <input type="submit" value="Save"> -->
-			</div>
-
-			<div class="about">
-		  		<h2>About</h2>
-		  		<input type="text" name="about">
-		  		<br><br>
-					<!-- <input type="submit" value="Save"> -->
 			</div>
 
 			<div class="interests">
 		  		<h2>Interests</h2>
-		  		<input type="text" name="interests">
+					<textarea name="interests" rows="3" cols="54"></textarea>
+		  		<br><br>
+			</div>
+
+			<div class="about">
+		  		<h2>About</h2>
+		  		<!-- <input type="text" name="about"> -->
+					<textarea name="about" rows="6" cols="54"></textarea>
 		  		<br><br>
 					<input type="submit" value="Save">
 			</div>
