add profile background

--- a/profile/index.html
+++ b/profile/index.html
@@ -13,6 +13,10 @@
 	<!-- Adding Google Font API -->
 	<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Tangerine|Gugi|Indie+Flower">
 	<style type="text/css">
+		body {
+			background: url("/profile/food.png");
+		}
+
 		.heading h1 {
 			font-size: 64px;
 			font-family: 'Indie Flower', sans-serif;
@@ -40,7 +44,7 @@
 		<h1>Profile</h1>
 	</div>
 
-	<button onclick="location.href='https://vendez-vous.github.io/nearby'" type="button">Users Available</button>
+	<button onclick="location.href='https://vendez-vous.github.io/nearby'" type="button">Users Nearby</button>
 	<br>
 	<br>
 	<button onclick="javascript:logout();">Logout from Facebook</button>
