resizing background for profile

--- a/profile/index.html
+++ b/profile/index.html
@@ -14,7 +14,9 @@
 	<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Tangerine|Gugi|Indie+Flower">
 	<style type="text/css">
 		body {
-			background: url("/profile/food.png");
+			background-image: url("/profile/food.jpg");
+			background-repeat: no-repeat;
+			background-size: cover;
 		}
 
 		.heading h1 {
