make textarea transparent

--- a/profile/index.html
+++ b/profile/index.html
@@ -35,6 +35,11 @@
 			padding: 20px;
 		}
 
+		textarea {
+			background-color: transparent;
+			/* background-color: black; */
+		}
+
 		button {
 			float: right;
 		}
