change border-width for form

--- a/profile/index.html
+++ b/profile/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Tangerine|Gugi|Indie+Flower">
 	<style type="text/css">
 		body {
-			background-image: url("/profile/food.jpg");
+			background-image: url("/profile/bagel.jpg");
 			background-repeat: no-repeat;
 			background-size: cover;
 		}
@@ -31,13 +31,17 @@
 		.subheadings {
 			width: 500px;
 			margin: 30px auto 0 auto;
-			border: 2px solid #dddddd;
+			border: 5px solid #000000;
 			padding: 20px;
 		}
 
 		textarea {
 			background-color: transparent;
 			/* background-color: black; */
+		}
+
+		input {
+			background-color: transparent;
 		}
 
 		button {
