--- a/profile/index.html
+++ b/profile/index.html
@@ -37,11 +37,13 @@
 
 		textarea {
 			background-color: transparent;
+			border-color: black;
 			/* background-color: black; */
 		}
 
 		input {
 			background-color: transparent;
+			border-color: black;
 		}
 
 		button {
