make buttons transparent

--- a/profile/index.html
+++ b/profile/index.html
@@ -46,8 +46,14 @@
 			border-color: black;
 		}
 
-		button {
+		.nearby-users {
+			float: left;
+			background-color: transparent;
+		}
+
+		.fb-logout {
 			float: right;
+			background-color: transparent;
 		}
 	</style>
 </head>
@@ -57,10 +63,8 @@
 		<h1>Profile</h1>
 	</div>
 
-	<button onclick="location.href='https://vendez-vous.github.io/nearby'" type="button">Users Nearby</button>
-	<br>
-	<br>
-	<button onclick="javascript:logout();">Logout from Facebook</button>
+	<button class="nearby-users" onclick="location.href='https://vendez-vous.github.io/nearby'" type="button">Users Nearby</button>
+	<button class="fb-logout" onclick="javascript:logout();">Logout from Facebook</button>
 
 	<div class="subheadings">
 		<form action="/action_page.php">
