--- a/profile/index.html
+++ b/profile/index.html
@@ -47,9 +47,12 @@
 		}
 
 		.buttons {
+			padding-left: 5px;
+		}
+
+		.buttons button {
 			background-color: transparent;
 			border-color: black;
-			padding-left: 5px;
 		}
 	</style>
 </head>
