--- a/index.html
+++ b/index.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>VendezVous</title>
 	<base href="/">
 	<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- meta tag for favicon-->
 	<link rel="shortcut icon" href="/favicon.png">
-  <!-- meta tag to make the website Search Engine friendly-->
-  <meta name="HandheldFriendly" content="True">
+	<!-- meta tag to make the website Search Engine friendly-->
+	<meta name="HandheldFriendly" content="True">
 	<meta name="description=" content="Vendez Vous - The app that lets you network over meals, based on your conversation interests." />
-  <meta name="keywords" content="vendezvous, meals, tinder, network, interests, conversation" />
-  <meta property="og:title" content="Vendez Vous" />
-  <meta property="og:url" content="https://vendez-vous.github.io" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="/favicon.ico" />
-  <meta property="og:description" content="The app that lets you network over meals, based on your conversation interests." />
+	<meta name="keywords" content="vendezvous, meals, tinder, network, interests, conversation" />
+	<meta property="og:title" content="Vendez Vous" />
+	<meta property="og:url" content="https://vendez-vous.github.io" />
+	<meta property="og:type" content="website" />
+	<meta property="og:image" content="/favicon.ico" />
+	<meta property="og:description" content="The app that lets you network over meals, based on your conversation interests." />
 	<!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 	<!-- Adding Google Font API -->
-	<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Tangerine|Gugi|Indie+Flower">
-  <style>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine|Gugi|Indie+Flower">
+	<style type="text/css">
+		body {
+			background-image: url("/assets/background.jpg");
+			background-repeat: no-repeat;
+			background-size: cover;
+		}
+
 		.heading h1 {
 			font-size: 64px;
 			font-family: 'Indie Flower', sans-serif;
-			text-align:center;
+			text-align: center;
 			background-color: rgb(124, 124, 224);
 			color: white;
 			margin: 0;
@@ -34,10 +41,8 @@
 			text-align: center;
 		}
 
-		button{
-
-		}
-  </style>
+		button {}
+	</style>
 </head>
 
 <body>
@@ -59,81 +64,85 @@
 
 	<script>
 		// This is called with the results from from FB.getLoginStatus().
-    function statusChangeCallback(response) {
-	    console.log('statusChangeCallback');
-	    console.log(response);
+		function statusChangeCallback(response) {
+			console.log('statusChangeCallback');
+			console.log(response);
 
-	    if (response.status === 'connected') {
-	      // Logged into your app and Facebook.
-	       testAPI();
-	       getInfo();
-	       window.top.location = "/nearby";
-				 var accessToken = response.authResponse.accessToken;
-	  	} else {
-	    	// The person is not logged into your app or we are unable to tell.
-	    	document.getElementById('status').innerHTML = 'Please login through your Facebook account';
-	  	}
+			if (response.status === 'connected') {
+				// Logged into your app and Facebook.
+				testAPI();
+				getInfo();
+				window.top.location = "/nearby";
+				var accessToken = response.authResponse.accessToken;
+			} else {
+				// The person is not logged into your app or we are unable to tell.
+				document.getElementById('status').innerHTML = 'Please login through your Facebook account';
+			}
 		}
 
 		function checkLoginState() {
-		  FB.getLoginStatus(function(response) {
-		    statusChangeCallback(response);
-		  });
+			FB.getLoginStatus(function(response) {
+				statusChangeCallback(response);
+			});
 		}
 
 		window.fbAsyncInit = function() {
-		  FB.init({
-		    appId      : 203968780201183,
-		    cookie     : true,  // enable cookies to allow the server to access
-		                        // the session
-		    xfbml      : true,  // parse social plugins on this page
-		    version    : 'v2.12', // use graph api version 2.8
-		    autoLogAppEvents : true,
-		  //  status 	 : true /* reduces time wasted in checking if the user is logged in or not */
-		  });
+			FB.init({
+				appId: 203968780201183,
+				cookie: true, // enable cookies to allow the server to access
+				// the session
+				xfbml: true, // parse social plugins on this page
+				version: 'v2.12', // use graph api version 2.8
+				autoLogAppEvents: true,
+				//  status 	 : true /* reduces time wasted in checking if the user is logged in or not */
+			});
 
-		  FB.getLoginStatus(function(response) {
-		    statusChangeCallback(response);
-		  });
+			FB.getLoginStatus(function(response) {
+				statusChangeCallback(response);
+			});
 		};
 
 		// Load the SDK asynchronously
 		(function(d, s, id) {
-		  var js, fjs = d.getElementsByTagName(s)[0];
-		  if (d.getElementById(id)) return;
-		  js = d.createElement(s); js.id = id;
-		  js.src = "https://connect.facebook.net/en_US/sdk.js";
-		  fjs.parentNode.insertBefore(js, fjs);
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s);
+			js.id = id;
+			js.src = "https://connect.facebook.net/en_US/sdk.js";
+			fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));
 
-	// Here we run a very simple test of the Graph API after login is
-	// successful.  See statusChangeCallback() for when this call is made.
+		// Here we run a very simple test of the Graph API after login is
+		// successful.  See statusChangeCallback() for when this call is made.
 		function testAPI() {
-		  console.log('Welcome!  Fetching your information.... ');
-		  FB.api('/me', function(response) {
-		    console.log('Successful login for: ' + response.name + " " + response.id + " "  + response.last_name);
-		    response.name + response.id + response.last_name
-		    document.getElementById('status').innerHTML ='Thanks for logging in, ' + response.name + '!';
-		  });
+			console.log('Welcome!  Fetching your information.... ');
+			FB.api('/me', function(response) {
+				console.log('Successful login for: ' + response.name + " " + response.id + " " + response.last_name);
+				response.name + response.id + response.last_name
+				document.getElementById('status').innerHTML = 'Thanks for logging in, ' + response.name + '!';
+			});
 		}
 
 		function getInfo() {
-			FB.api('/me', 'GET', {fields: 'name,id,picture.width(150).height(150)'}, function(response) {
-   			document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>";
-            $.post( "api.vendez-vous.ml/user-login", response, function(data) {
-                console.log(data);
-                console.log("HERE!!!");
-            }, "json");
-	  	});
+			FB.api('/me', 'GET', {
+				fields: 'name,id,picture.width(150).height(150)'
+			}, function(response) {
+				document.getElementById('status').innerHTML = "<img src='" + response.picture.data.url + "'>";
+				$.post("api.vendez-vous.ml/user-login", response, function(data) {
+					console.log(data);
+					console.log("HERE!!!");
+				}, "json");
+			});
 		}
 	</script>
 
 	<div id="status"></div>
 
 	<!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
+
 </html>
