--- a/profile/index.html
+++ b/profile/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<title>VendezVous</title>
 	<base href="/">
@@ -7,14 +8,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- meta tag for favicon-->
 	<link rel="shortcut icon" href="/favicon.png">
-  <!-- meta tag to make the website Search Engine friendly-->
-  <meta name="HandheldFriendly" content="True">
+	<!-- meta tag to make the website Search Engine friendly-->
+	<meta name="HandheldFriendly" content="True">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 	<!-- Adding Google Font API -->
-	<link rel="stylesheet"href="https://fonts.googleapis.com/css?family=Tangerine|Gugi|Indie+Flower">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine|Gugi|Indie+Flower">
 	<style type="text/css">
 		body {
-			background-image: url("/profile/bagel.jpg");
+			background-image: url("/profile/assets/bagel.jpg");
 			background-repeat: no-repeat;
 			background-size: cover;
 		}
@@ -22,7 +23,7 @@
 		.heading h1 {
 			font-size: 64px;
 			font-family: 'Indie Flower', sans-serif;
-			text-align:center;
+			text-align: center;
 			background-color: rgb(124, 124, 224);
 			color: white;
 			margin: 0;
@@ -65,23 +66,23 @@
 	<div class="subheadings">
 		<form action="/action_page.php">
 			<div class="name">
-	  		<h2>Name</h2>
-	  		<input type="text" name="name">
-	  		<br><br>
+				<h2>Name</h2>
+				<input type="text" name="name">
+				<br><br>
 			</div>
 
 			<div class="interests">
-		  		<h2>Interests</h2>
-					<textarea name="interests" rows="3" cols="54"></textarea>
-		  		<br><br>
+				<h2>Interests</h2>
+				<textarea name="interests" rows="3" cols="54"></textarea>
+				<br><br>
 			</div>
 
 			<div class="about">
-		  		<h2>About</h2>
-		  		<!-- <input type="text" name="about"> -->
-					<textarea name="about" rows="6" cols="54"></textarea>
-		  		<br><br>
-					<input type="submit" value="Save">
+				<h2>About</h2>
+				<!-- <input type="text" name="about"> -->
+				<textarea name="about" rows="6" cols="54"></textarea>
+				<br><br>
+				<input type="submit" value="Save">
 			</div>
 		</form>
 	</div>
@@ -92,41 +93,43 @@
 
 	<script>
 		window.fbAsyncInit = function() {
-	    FB.init({
-	      appId      : 203968780201183,
-	      cookie     : true,  // enable cookies to allow the server to access
-	                          // the session
-	      xfbml      : true,  // parse social plugins on this page
-	      version    : 'v2.12', // use graph api version 2.8
-	      autoLogAppEvents : true,
-	     // status 	 : true /* reduces time wasted in checking if the user is logged in or not */
-	    });
-	  };
+			FB.init({
+				appId: 203968780201183,
+				cookie: true, // enable cookies to allow the server to access
+				// the session
+				xfbml: true, // parse social plugins on this page
+				version: 'v2.12', // use graph api version 2.8
+				autoLogAppEvents: true,
+				// status 	 : true /* reduces time wasted in checking if the user is logged in or not */
+			});
+		};
 
 		(function(d, s, id) {
-	    var js, fjs = d.getElementsByTagName(s)[0];
-	    if (d.getElementById(id)) return;
-	    js = d.createElement(s); js.id = id;
-	    js.src = "https://connect.facebook.net/en_US/sdk.js";
-	    fjs.parentNode.insertBefore(js, fjs);
-	  }(document, 'script', 'facebook-jssdk'));
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s);
+			js.id = id;
+			js.src = "https://connect.facebook.net/en_US/sdk.js";
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
 
 		function logout() {
 			FB.getLoginStatus(function(response) {
-        if (response && response.status === 'connected') {
-            FB.logout(function(response) {
-                // document.location.reload();
-								window.location = "https://vendez-vous.github.io";
-            });
-        }
-    	});
+				if (response && response.status === 'connected') {
+					FB.logout(function(response) {
+						// document.location.reload();
+						window.location = "https://vendez-vous.github.io";
+					});
+				}
+			});
 		}
 	</script>
 
 	<!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 </body>
+
 </html>
